hphp/test/zend/good/ext-standard-array/bug23581.php
<?php
var_dump(
  array_map(
    NULL,
    array(1,2,3),
    array(4,5,6),
    array(7,8,9)
  )
);
?>